--- a/lab05/report/src/literature.tex
+++ b/lab05/report/src/literature.tex
@@ -1,6 +1,7 @@
 \begin{thebibliography}{99}
-    \bibitem{Kormen}
-    Томас Х. Кормен, Чарльз И. Лейзерсон, Рональд Л. Ривест, 
-    Клиффорд Штайн Алгоритмы: построение и анализ. - 3-е изд. - М.: ООО "И. Д. Вильямс", 2013. - 1328 с.
+    \bibitem{Gusfield}
+    Гасфилд Дэн Строки, деревья и последовательности в алгоритмах: Информатика
+    и вычислительная биология / Пер. с англ. И.В.Романовского. -- СПб.: Невский
+    Диалект; БХВ-Петербург, 2003. -- 654 с.: ил.
 \end{thebibliography}
 \pagebreak
