--- a/lab05/report/src/problem.tex
+++ b/lab05/report/src/problem.tex
@@ -1,7 +1,6 @@
-\CWHeader{Лабораторная работа \textnumero 8}
+\CWHeader{Лабораторная работа \textnumero 5}
 
 \CWProblem{
-    На координатной прямой даны несколько отрезков с координатами $[L_i, R_i]$. 
-    Необходимо выбрать минимальное количество отрезков, которые бы полностью покрыли интервал $[0, M]$.
+    Найти образец в тексте используя статистику совпадений.
 }
 \pagebreak
