--- a/lab05/report/src/thinks.tex
+++ b/lab05/report/src/thinks.tex
@@ -1,5 +1,5 @@
 \section{Выводы}
-Выполнив восьмую лабораторную работу по курсу \enquote{Дискретный анализ}, я решил задачу с помощью жадных алгоритмов. В ходе работы
-столкнулся с проблемой поиска оптимального решения. Изначально я выбирал отрезок, который максимально
-покрывает весь интервал, но позже я понял, что такой отрезок должен покрывать начало исходного интервала.
+Выполнив пятую лабораторную работу по курсу \enquote{Дискретный анализ}, я реализовал алгоритм Укконена и статистику совпадений. В ходе работы
+столкнулся с массой проблем. Среди них множественные seg faults и time limits. После множественного рефакторинга кода мне удалось
+сделать эту лабораторную работу.
 \pagebreak
