--- a/lab05/report/src/src.tex
+++ b/lab05/report/src/src.tex
@@ -1,16 +1,22 @@
 \section{Описание}
-Требуется решить задачу с помощью жадных алгоритмов.
+Требуется реализовать алгоритм Укконена для построения суффиксного дерева и статистики совпадений.
 
-В \cite{Kormen} сказано: \enquote{Такой алгоритм делает на каждом шаге локально оптимальный
-выбор, -- в надежде, что итоговое решение также окажется оптимальным}. 
+В \cite{Gusfield} сказано: \enquote{Алгоритм Укконена для построения суффиксных деревьев за линейное время}. 
+Там же и описан этот алгоритм.
 
-Я предлагаю отсортировать исходный массив отрезков по левой и правой границе. Затем
-итерироваться по нему и на каждом шаге искать самый большой отрезок, который покрывает ещё
-непокрытую на предыдущих этапах часть. Соответственно, на каждом шаге нужно обновлять
-границы непокрытого исходного отрезка.
+Статистика совпадений определена в \cite{Gusfield} как:
+\enquote{Определим $ms(i)$ как длину наибольшей подстроки $T$, начинающейся с позиции $i$, 
+которая совпадает где-то (но мы не знаем, где) с подстрокой $P$. Эти значения называются статистикой совпадений.}
 
-Сложность такого алгоритма -- $O(n \cdot log(n))$, где $n$ -- количество отрезков.
-Такая сложность получается, потому что я использую quick sort.
+Соответственно, алгоритм поиска подстроки в строке:
+
+1. Построить суффиксное дерево из паттерна с помощью алгоритма Укконена.
+
+2. Составить статистику совпадений.
+
+3. Найти индексы, где статистика совпадений равна длине паттерна.
+
+Сложность такого алгоритма -- $O(n + m)$, где $n$ -- длина паттерна, $m$ -- длина текста.
 
 \pagebreak
 
@@ -20,46 +26,79 @@
 \rowcolor{lightgray}
 \multicolumn{2}{|c|} {main.cpp}\\
 \hline
-bool IndexComparator(const Segment\& a, const Segment\& b)&Компаратор для сортировки по индексу.\\
+void CreateTree()&Метод создания дерева из строки.\\
 \hline
-bool SegmentComparator(const Segment\& a, const Segment\& b)&
-Компаратор для сортировки по левой и правой границе.\\
+void AddSuffix(int position)&
+Добавить в дерево i-тый символ текста.\\
+\hline
+void DestroyTree(TNode* node)&Удаление дерева.\\
+\hline
+static int CurveLength(TNode* node)&Длина текста на ребре.\\
+\hline
+void SplitCurve(TNode* node, int position)&разделение ребра (создание внутреннего узла)\\
+\hline
+void MatchingStatistic(std::vector<int>\& ms, const std::string\& str)&Составление статистики совпадений\\
 \hline
 \end{longtable}
 
 \begin{lstlisting}[language=C++]
-	struct Segment {
-    int64_t start;
-    int64_t end;
-    size_t index;
+	const char SENTINEL = '$';
 
-    Segment() = default;
+	class TSuffixTree {
+	private:
+		class TNode {
+			public:
+				int begin;
+				int* end;
+				TNode* suffixLink;
+				bool isLeaf;
+				std::unordered_map<char, TNode *> children;
 
-    Segment(int64_t start, int64_t end, size_t index) : start{start}, end{end}, index{index} {}
+				TNode(int start, int* finish, TNode* suffixLink, bool leaf);
+				~TNode() = default;
+		};
 
-    int64_t ComputeCover(int64_t left, int64_t m) {
-        if (end < 0 || start > m) {
-            return 0;
-        }
-        return std::min<int64_t>(m, end) - std::max<int64_t>(left, start);
-    }
+		struct TreeData {
+			TNode* currentNode;
+			int currentIndex;
+			int jumpCounter;
+			int plannedSuffixes;
+			TNode* lastInnerNode;
+		};
+
+
+		TNode* root;
+		std::string str;
+		int suffixTreeEnd;
+		TreeData params;
+
+		void CreateTree();
+		void AddSuffix(int position);
+		void DestroyTree(TNode* node);
+
+		static int CurveLength(TNode* node);
+		void SplitCurve(TNode* node, int position);
+
+	public:
+		TSuffixTree(std::string& input_str);
+		~TSuffixTree();
+		void MatchingStatistic(std::vector<int>& ms, const std::string& str);
+};
+
 };
 \end{lstlisting}
 \pagebreak
 
 \section{Консоль}
 \begin{alltt}
-	cat-mood@nuclear-box:~/programming/mai-da-labs/lab08/build$ ./lab08_exe 
-	6
-	1 5
-	0 1
-	1 2
-	2 3
-	3 4
-	4 5
-	5
-	2
-	1 5
-	0 1 
+	cat-mood@nuclear-box:~/programming/mai-da-labs/lab05/build$ ./lab05_exe 
+	abcab
+	abcabcabcababcabcabcababc
+	1
+	4
+	7
+	12
+	15
+	18
 \end{alltt}
 \pagebreak
