--- a/kp/report/src/src.tex
+++ b/kp/report/src/src.tex
@@ -12,13 +12,20 @@
 В конечном счёте правило классификации будет пропорционально выбору класса с максимальной апостериорной вероятностью:
 $$y_k \propto \arg \max_{y_k} P(y_k) \prod^n_{i = 1} P(X_i | y_k)$$
 
+Чтобы получить вероятность $P(X_i | y_k)$ на практике, я вычисляю частоту слова $X_i$ в классе $y_k$.
+Вероятность $P(y_k)$ -- это отношение количества слов в классе $y_k$ к количеству всех слов, использовавшихся для
+обучения модели.
+
+Для того, чтобы вероятность не оказалась равной нулю, я использую сглаживание. При вычислении $P(X_i | y_k) = \frac{X_i}{X}$
+я добавляю в числитель единицу.
+
 \pagebreak
 
 \section{Исходный код}
 \begin{longtable}{|p{7.5cm}|p{7.5cm}|}
 \hline
 \rowcolor{lightgray}
-\multicolumn{2}{|c|} {kmp.h}\\
+\multicolumn{2}{|c|} {}\\
 \hline
 void ToLowerCase(std::string\& str)&Преобразование строки в нижний регистр.\\
 \hline
